projects/vb6parse/snapshots/parsers/cst/property_statements/property_set_with_object.snap
---
source: projects/vb6parse/src/parsers/cst/property_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: PropertyStatement
      children:
        - kind: PropertyKeyword
          text: Property
        - kind: Whitespace
          text: " "
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Callback
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: ByRefKeyword
              text: ByRef
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: newObj
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: InterPress
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SetKeyword
                  text: Set
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: mCallback
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: newObj
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: PropertyKeyword
          text: Property
        - kind: Newline
          text: "\n"
